--- a/index.html
+++ b/index.html
@@ -3,22 +3,34 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Grupo Ideal Trends</title>
+    <meta name="description" content="O Grupo Ideal Trends é uma empresa de destaque no setor de tendências. Conheça mais sobre os serviços e soluções que oferecemos para empresas em expansão.">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Grupo Ideal Trends: A empresa que acredita em mudanças significativas</title>
 </head>
 
 <body>
     <header>
-        <img src="" alt="Logo">
+        <div>
+            <img src="" alt="Logo">
+            <h1>Germinne</h1>
+        </div>
 
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Empresa</li>
-                <li>Clientes</li>
-                <li>Contato</li>
+                <li>
+                    <a href="">Home</a>
+                </li>
+                <li>
+                    <a href="">Empresa</a>
+                </li>
+                <li>
+                    <a href="">Clientes</a>
+                </li>
+                <li>
+                    <a href="">Contatos</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -87,10 +99,18 @@
 
         <footer>
             <ul>
-                <li>Home</li>
-                <li>Empresa</li>
-                <li>Clientes</li>
-                <li>Contatos</li>
+                <li>
+                    <a href="">Home</a>
+                </li>
+                <li>
+                    <a href="">Empresa</a>
+                </li>
+                <li>
+                    <a href="">Clientes</a>
+                </li>
+                <li>
+                    <a href="">Contatos</a>
+                </li>
             </ul>
         </footer>
 
