--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="O Grupo Ideal Trends é uma empresa de destaque no setor de tendências. Conheça mais sobre os serviços e soluções que oferecemos para empresas em expansão.">
+    <meta name="description" content="O Grupo Ideal Trends é uma empresa de destaque no setor de tendências. Conheça mais sobre os serviços e soluções.">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Grupo Ideal Trends: A empresa que acredita em mudanças significativas</title>
+    <title>Grupo Ideal Trends: A empresa de mudanças</title>
 </head>
 
 <body>
