--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="./assets/images/logo.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="O Grupo Ideal Trends é uma empresa de destaque no setor de tendências. Conheça mais sobre os serviços e soluções.">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -11,9 +11,14 @@
 </head>
 
 <body>
+    <div class="box-contatos">
+        <p>(11) 1234-1234</p>
+        <p>(11) 1234-1234</p>
+    </div>
+
     <header>
         <div>
-            <img src="" alt="Logo">
+            <img src="./assets/images/logo.svg" alt="Logo">
             <h1>Germinne</h1>
         </div>
 
@@ -24,6 +29,22 @@
                 </li>
                 <li>
                     <a href="">Empresa</a>
+
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Empresa</a></li>
+                        <li><a href="">Clientes</a></li>
+                        <li>
+                            <a href="">Contatos</a>
+
+                            <ul>
+                                <li><a href="">Home</a></li>
+                                <li><a href="">Empresa</a></li>
+                                <li><a href="">Clientes</a></li>
+                                <li><a href="">Contatos</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="">Clientes</a>
