--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="icon" type="image/x-icon" href="./assets/images/logo.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="O Grupo Ideal Trends é uma empresa de destaque no setor de tendências. Conheça mais sobre os serviços e soluções.">
+        content="Germinne. Semeie a vida e cultive sabor de forma sustentável.">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles/colors.css">
     <link rel="stylesheet" href="./assets/styles/index.css">
-    <title>Grupo Ideal Trends: A empresa de mudanças</title>
+    <title>Germinne - Cultive sabor</title>
 </head>
 
 <body>
